# dim-python

./: Cargo.toml  README.md  Vector.pyi  pyproject.toml
mteb_benchmark/: pyproject.toml
src/: lib.rs  vector.rs
tests/: test_vector.py
