[package]
name = "dim-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dim_python"
crate-type = ["cdylib"]

[dependencies]
dim-rs = { git = "https://github.com/AspadaX/dim", version = "0.2.0" }
image = "0.25.5"
pyo3 = "0.23.1"
